[gd_scene load_steps=3 format=3 uid="uid://cdb5662mat44u"]

[ext_resource type="Script" path="res://Game/scanner_component.gd" id="1_5052h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o2ihg"]
radius = 200.0

[node name="ScannerComponent" type="Area2D"]
monitorable = false
script = ExtResource("1_5052h")

[node name="ScanArea" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_o2ihg")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
